# fictional-octo-fiesta

./: .gitignore  GREAT SAGE Graph Recursive.txt  README.md  TASKS.md  config.yaml  domain_authority.yaml  pyproject.toml  test_integration.py  working_models.json
harness/: Cargo.toml
harness/src/: audit.rs  domain_auth.rs  graph.rs  lib.rs  phases.rs  schema.rs  scorer.rs  snapshot.rs  tmpref.rs  tools.rs  validator.rs
orchestrator/: __init__.py  brain.py  loop.py  ollama_client.py  parser.py  prompts.py  tool_executor.py
snapshots/: audit_26680e93.jsonl  audit_5775beb3.jsonl  audit_5a54c05d.jsonl  audit_7ce0717b.jsonl  audit_e6e58bdd.jsonl  audit_f09c25d7.jsonl  audit_f2043f59.jsonl  snapshot_round_0.json
